# node_and_fastapi_class

./: .gitignore  package-lock.json
.kilocode/: mcp.json
contact-app-class-prc-node/: Dockerfile  README.md  app.js  config.env  database.js  docker-compose.yml  package-lock.json  package.json  server.js
contact-app-class-prc-node/controllers/: contactController.js  contact_controller.js
contact-app-class-prc-node/models/: contactModel.js
contact-app-class-prc-node/mongodb-docker/: docker-compose.yml
contact-app-python/: .env  Dockerfile  app.py  database.py  docker-compose.yml  pyproject.toml  server.py
contact-app-python/controller/: contact_controllers.py
contact-app-python/models/: contact_model.py
contact-app-python/nginx/: default.conf
contact-app-python/routes/: contact_routes.py
contact-app-python/services/: contact_services.py
contact-app-python/templates/: add-contact.html  home.html  show-contact.html  update-contact.html
contact-app-python/templates/partials/: header.html
contact-project-node/: Dockerfile  app.js  config.env  database.js  docker-compose.yml  package-lock.json  package.json
node_app/: app.js  config.env  database.js  first_class.js  fourth.js  package-lock.json  package.json  second_class.js  third_class.js
prac_node_app/: package-lock.json
prac_node_app_class_3/: package.json  productsData.json  script.js
prac_python_app/: main.py
prac_python_app_class_3/: productsData.json
python_app/: data.json  database.py  first_class.py  fourth.py  productsData.json  second_class.py  third_class.py
(+22 files in other folders)
