[project]
name = "contact-app-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
